# advanced-localization

./: .gitignore  pyproject.toml
new_localization/: example_svrp.py  main.py  visualization.py
new_localization/xsrp_project/tests/: test_conventional_srp.py  test_conventional_srp_doa.py
new_localization/xsrp_project/xsrp/: conventional_srp.py  srp_mappers.py  xsrp.py
new_localization/xsrp_project/xsrp/signal_features/: gcc_phat.py
